# spco_dataset_generator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
bash/: reset-spco-dataset-output.bash
launch/: rgiro_chatter_rqt.launch
src/: __init__.py  commonsense_data_generator.py  data_check.py  generate_object_dict.py  logical_inference_data_generator.py  rename.py  spco2_object_features.py  spco2_object_features_10_ave.py  spco2_object_features_10_ave_true.py  spco2_object_features_all_frame.py  spco2_object_features_all_frame_remove_new_objects.py  spco2_object_features_all_frame_robocup2023.py  spco2_object_features_all_frame_v2.py  spco2_object_features_jcmsi2023.py  spco2_object_features_jsai2023.py  spco_data_generator.py  spco_data_generator_add_learning.py  spco_data_generator_horie.py  spco_img_generator.py  spco_img_generator_10_ave.py  spco_non_object_generator.py  spco_non_word_generator.py  spco_word_generator.py  trial.py
